# opencv

./: .gitignore  .gitmodules  FaceDetect.code-workspace  README.md
download/: create_data.py  rename-file-by-number-sort.py  split_train_val.py  voc_label.py
opencv/install/: setup_vars_opencv4.cmd
opencv/install/x64/vc16/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco455.lib  opencv_aruco455d.lib  opencv_barcode455.lib  opencv_barcode455d.lib  opencv_bgsegm455.lib  opencv_bgsegm455d.lib  opencv_bioinspired455.lib  opencv_bioinspired455d.lib  opencv_calib3d455.lib  opencv_calib3d455d.lib  opencv_ccalib455.lib  opencv_ccalib455d.lib  opencv_core455.lib  opencv_core455d.lib  opencv_datasets455.lib  opencv_datasets455d.lib  opencv_dnn455.lib  opencv_dnn455d.lib  opencv_dnn_objdetect455.lib  opencv_dnn_objdetect455d.lib  opencv_dnn_superres455.lib  opencv_dnn_superres455d.lib  opencv_dpm455.lib  opencv_dpm455d.lib  opencv_face455.lib  opencv_face455d.lib  opencv_features2d455.lib  opencv_features2d455d.lib  opencv_flann455.lib  opencv_flann455d.lib  opencv_fuzzy455.lib  opencv_fuzzy455d.lib  opencv_gapi455.lib  opencv_gapi455d.lib  opencv_hfs455.lib  opencv_hfs455d.lib  (+68 more)
test/: test_opencv_cv2.py
test/FaceDetect/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  OpenCVVideoCapture.cpp  OpenCVVideoCapture.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/: create_csv.py  test_video_capture_index.py
yolov5-6.1/: detect.py  kmeans.py  train.py
yolov5-6.1/data/: people.yaml
yolov5-6.1/models/: yolov5x.yaml
yolov5-6.1/utils/: datasets.py
